--- a/AndroidDynamicLinks/app/build.gradle
+++ b/AndroidDynamicLinks/app/build.gradle
@@ -7,9 +7,9 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.android_dynamiclink"
-        minSdk 30
-        targetSdk 32
+        applicationId "com.example.android_dynamiclinks"
+        minSdk 27
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -29,11 +29,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding{
+        enabled=true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
