--- a/AndroidDynamicLinks/settings.gradle
+++ b/AndroidDynamicLinks/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Android-DynamicLink"
+rootProject.name = "Android-DynamicLinks"
 include ':app'
