--- a/AndroidDynamicLinks/app/src/main/AndroidManifest.xml
+++ b/AndroidDynamicLinks/app/src/main/AndroidManifest.xml
@@ -5,21 +5,28 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDynamicLink"
-        tools:targetApi="31">
+        android:launchMode="singleTask">
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data
+                    android:scheme="https"
+                    android:host="www.testdynamiclinkswithandroid.com"
+                    android:pathPrefix="/test1"/>
             </intent-filter>
         </activity>
     </application>
