--- a/AndroidDynamicLinks/app/src/main/AndroidManifest.xml
+++ b/AndroidDynamicLinks/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data
                     android:scheme="https"
-                    android:host="www.testdynamiclinkswithandroid.com"
+                    android:host="testdynamiclinkswithandroid.page.link"
                     android:pathPrefix="/test1"/>
             </intent-filter>
         </activity>
