--- a/example/example1/starter/app/build.gradle
+++ b/example/example1/starter/app/build.gradle
@@ -53,5 +53,8 @@ dependencies {
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-
+  //Firebase
+  implementation platform('com.google.firebase:firebase-bom:30.4.1')
+  implementation 'com.google.firebase:firebase-dynamic-links-ktx'
+  implementation 'com.google.firebase:firebase-analytics-ktx'
 }
